<resources>
    <string name="app_name" translatable="false">Oxygen Customizer</string>
    <string name="xposeddescription">Customize Oxygen OS</string>
    <string name="default_value">Default</string>
    <string name="settingslib_learn_more_text">Learn more</string>
    <string name="settings_label">Settings</string>
    <string name="toast_rename_file">Rename file to something simpler</string>
    <string name="toast_applied">Applied</string>
    <string name="toast_disabled">Disabled</string>
    <string name="toast_error">Something went wrong</string>
    <string name="opt_selected1">Selected: %s</string>
    <string name="opt_selected2">Selected: %s%s</string>
    <string name="requires_sysui_restart">This section requires SystemUI restart\nTap on menu to restart.</string>
    <string name="init_module_installation">Initializing setup</string>
    <string name="step">Step</string>
    <string name="module_installation_step1">Creating module shell</string>
    <string name="module_installation_step2">Extracting necessary files</string>
    <string name="module_installation_step3">Creating overlay APKs</string>
    <string name="module_installation_step4">Aligning overlay APKs</string>
    <string name="module_installation_step5">Signing overlay APKs</string>
    <string name="module_installation_step6">Cleaning directories</string>
    <string name="onboarding_title_1">Got Bored of Stock UI ?</string>
    <string name="onboarding_subtitle_1">Let\'s customize everything to our likings.</string>
    <string name="onboarding_desc_1">Ditch the stock UI monotony – personalize every tech detail to match your style and preferences.</string>
    <string name="onboarding_title_2">Is My Device Supported ?</string>
    <string name="onboarding_subtitle_2">Oxygen Customizer supports OOS-based ROMs.</string>
    <string name="onboarding_desc_2">Compatible with all OOS-based ROMs, ensuring broad support for Android devices.</string>
    <string name="onboarding_title_3">Shall We Begin Now ?</string>
    <string name="onboarding_subtitle_3">It is time for Oxygen Customizer to do some internal work.</string>
    <string name="onboarding_desc_3">Starting internal tasks, marking the initiation of essential work. Ready to begin?</string>
    <string name="need_storage_perm_title">Need Storage Permission</string>
    <string name="need_storage_perm_desc">Storage permission is required to build the necessary files.</string>
    <string name="compatible_root_not_found_title">Could Not Find Compatible Root Method</string>
    <string name="misc">Miscellaneous</string>
    <string name="general_on">On</string>
    <string name="general_off">Off</string>
    <string name="battery_icon_customize_title">Customize Battery Icon</string>
    <string name="battery_icon_style">Battery Icon Style</string>
    <string name="battery_icon_change_charging_icon_title">Custom Charging Icon</string>
    <string name="battery_icon_settings">Battery Icon Preferences</string>
    <string name="battery_width_title">Battery Width</string>
    <string name="battery_height_title">Battery Height</string>
    <string name="hide_battery_title">Hide Battery</string>
    <string name="hide_battery_desc">Keep only charging icon and percentage</string>
    <string name="battery_charging_icon">Charging Icon Preferences</string>
    <string name="charging_icon_style_title">Charging Icon Style</string>
    <string name="charging_icon_margin_left_title">Charging Icon Margin Left</string>
    <string name="charging_icon_margin_right_title">Charging Icon Margin Right</string>
    <string name="charging_icon_size_title">Charging Icon Size</string>
    <string name="perimeter_alpha_title">Perimeter Alpha</string>
    <string name="perimeter_alpha_desc">Make battery perimeter semi transparent</string>
    <string name="fill_alpha_title">Fill Alpha</string>
    <string name="fill_alpha_desc">Make battery fill semi transparent</string>
    <string name="rainbow_color_title">Rainbow Color</string>
    <string name="rainbow_color_desc">Show different color based on battery level</string>
    <string name="blend_color_title">Blend Color</string>
    <string name="blend_color_desc">Blend battery color with custom color</string>
    <string name="fill_color_title">Fill Color</string>
    <string name="fill_color_desc">Fill battery with custom color</string>
    <string name="fill_gradient_color_title">Fill Gradient Color</string>
    <string name="fill_gradient_color_desc">Fill battery with gradient color</string>
    <string name="charging_fill_color_title">Charging Fill Color</string>
    <string name="charging_fill_color_desc">Change color of charging battery</string>
    <string name="fast_charging_fill_color_title">Fast Charging Fill Color</string>
    <string name="fast_charging_fill_color_desc">Change color of fast charging battery</string>
    <string name="powersave_fill_color_title">Powersave Fill Color</string>
    <string name="powersave_fill_color_desc">Change color of powersave battery</string>
    <string name="powersave_indicator_color_title">Powersave Indicator Color</string>
    <string name="powersave_indicator_color_desc">Change color of powersave indicator</string>
    <string name="reverse_layout_title">Reverse Layout</string>
    <string name="reverse_layout_desc">Show percentage on the opposite side</string>
    <string name="rotate_layout_title">Rotate Layout</string>
    <string name="rotate_layout_desc">Rotate battery layout 180 degrees</string>
    <string name="hide_percentage_title">Hide Percentage</string>
    <string name="hide_percentage_desc">Hide battery percentage text</string>
    <string name="inside_percentage_title">Inside Percentage</string>
    <string name="inside_percentage_desc">Move percentage to inside battery icon</string>
    <string name="battery_icon_color">Battery Icon Colors</string>
    <string name="battery_edit_percentage_size_title">Customize Percentage Size</string>
    <string name="battery_percentage_size">Percentage Size</string>
    <string name="launcher_intro_title">Launcher Options requires Launcher Restart.\nTap on menu to restart.</string>
    <string name="launcher_recents">Recents</string>
    <string name="launcher_app_details_title">Open App Details</string>
    <string name="launcher_app_details_summary">Tap on the app icon to open app details in Settings.</string>
    <string name="launcher_disable_recents_previous_page_title">Disable previous task</string>
    <string name="launcher_disable_recents_previous_page_summary">Disable the automatic switch to previous task in recents.</string>
    <string name="launcher_replace_lock_title">Replace lock with kill</string>
    <string name="launcher_replace_lock_summary">Replace the lock gesture (swipe down in recents) with kill app feature.</string>
    <string name="misc_category">Miscellaneous</string>
    <string name="misc_remove_rotate_floating_title">Remove rotate floating button</string>
    <string name="misc_power_menu">Power Menu</string>
    <string name="misc_power_menu_hide_sos">Hide SOS in Power Menu</string>
    <string name="show_advanced_reboot_title">Advanced Reboot</string>
    <string name="show_advanced_reboot_summary">Add advanced reboot options to power menu.</string>
    <string name="use_auth_for_advanced_reboot_title">Use Authentication</string>
    <string name="use_auth_for_advanced_reboot_summary">Require authentication to use advanced reboot options.</string>
    <string name="show_entry_settings_title">Show entry in Settings</string>
    <string name="remove_usb_dialog">Remove USB Dialog</string>
    <string name="remove_usb_dialog_summary">If enabled, the USB dialog will be hidden and MTP option will be chosen automatically.</string>
    <string name="general_settings">General</string>
    <string name="app_icon_themed">Use themed App Icon</string>
    <string name="language_title">Language</string>
    <string name="delete_all_title">Delete All</string>
    <string name="delete_all_summary">Delete all settings</string>
    <string name="export_title">Export</string>
    <string name="export_summary">Export settings</string>
    <string name="import_title">Import</string>
    <string name="import_summary">Import settings</string>
    <string name="more_logging_title">More logging</string>
    <string name="more_logging_summary">Enable more logging.\nThis can help when sending Bug Reports.</string>
    <string name="settings_about_section_title">About</string>
    <string name="github_repo_title">GitHub repository</string>
    <string name="github_repo_summary" translatable="false">DHD22800/OxygenCustomizer</string>
    <string name="support_group_title">Support Group</string>
    <string name="support_group_summary" translatable="false">t.me/OxygenCustomizerGroup</string>
    <string name="translate_title">Translate in your language</string>
    <string name="translate_summary">Help us to translate Oxygen Customizer into your language</string>
    <string name="check_updates">Check Updates</string>
    <string name="credits_title">Credits</string>
    <string name="credits_summary">Thanking those who made this possible.</string>
    <string name="auto_update_title">Automatic updates</string>
    <string name="auto_update_summary">Check for new versions once in a while</string>
    <string name="update_over_wifi_title">Check updates over WiFi only</string>
    <string name="update_over_wifi_summary">Check for updates in background only when connected to wifi</string>
    <string name="update">Update</string>
    <string name="style_category">Themes and Styles</string>
    <string name="icon_theme_category">Icon pack and Styles</string>
    <string name="theme_customization_ui_style_title">UI Style</string>
    <string name="theme_customization_ui_style_summary">Set custom style for your interface</string>
    <string name="theme_customization_icon_pack_title">Icon pack</string>
    <string name="theme_customization_icon_pack_summary">Set custom icon pack style</string>
    <string name="theme_customization_settings_icons_title">Settings Icons</string>
    <string name="theme_customization_settings_icons_summary">Set custom icons in Settings</string>
    <string name="theme_customization_signal_icon_title">Signal icon style</string>
    <string name="theme_customization_signal_icon_summary">Set custom signal icon style</string>
    <string name="theme_customization_wifi_icon_title">WiFi icon style</string>
    <string name="theme_customization_wifi_icon_summary">Set custom wifi icon style</string>
    <string name="theme_customization_navbar_title">Navbar style</string>
    <string name="theme_customization_navbar_summary">Set custom navigation bar style</string>
    <string name="theme_customization_toast_frame_title">Toast Frame</string>
    <string name="theme_customization_toast_frame_summary">Change toast notification style</string>
    <string name="notification_styles">Notification Styles</string>
    <string name="notification_styles_desc">Set custom style for notifications</string>
    <string name="notification_corner_radius_title">Notification Corner Radius</string>
    <string name="notification_corner_radius_summary">Set custom corner radius for notifications.</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_pref">Customize Dark Mode</string>
    <string name="fix_lag_title">App Lag Fix</string>
    <string name="fix_lag_summary">Fix lag when opening app from recents</string>
    <string name="fix_lag_force_all_apps_title">Force all apps</string>
    <string name="fix_lag_force_all_apps_summary">Force all apps to use the fix.\nWarning: this could cause weird issues, use at your own risk!</string>
    <string name="fix_lag_apps_summary">Select to which app apply the fix</string>
    <string name="fix_lag_apps_title">Select APPs</string>
</resources>