<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <it.dhd.oneplusui.preference.OplusPreferenceCategory
        android:title="@string/general_settings"
        app:iconSpaceReserved="false">

        <it.dhd.oneplusui.preference.OplusSwitchPreference
            android:defaultValue="false"
            android:key="themed_icon"
            android:summaryOff="@string/general_off"
            android:summaryOn="@string/general_on"
            android:title="@string/app_icon_themed"
            app:icon="@drawable/app_icon" />

        <it.dhd.oneplusui.preference.OplusListPreference
            android:entries="@array/locale_name"
            android:entryValues="@array/locale_code"
            android:icon="@drawable/ic_language"
            android:key="appLanguage"
            android:defaultValue="system"
            app:useSimpleSummaryProvider="true"
            android:title="@string/language_title" />

    </it.dhd.oneplusui.preference.OplusPreferenceCategory>

    <it.dhd.oneplusui.preference.OplusPreferenceCategory
        android:title="@string/misc"
        app:iconSpaceReserved="false">

        <it.dhd.oneplusui.preference.OplusPreference
            android:key="deleteAllPrefs"
            android:summary="@string/delete_all_summary"
            android:title="@string/delete_all_title"
            app:icon="@drawable/ic_delete" />

        <it.dhd.oneplusui.preference.OplusPreference
            android:key="export"
            android:summary="@string/export_summary"
            android:title="@string/export_title"
            app:icon="@drawable/ic_export" />

        <it.dhd.oneplusui.preference.OplusPreference
            android:key="import"
            android:summary="@string/import_summary"
            android:title="@string/import_title"
            app:icon="@drawable/ic_import" />

        <it.dhd.oneplusui.preference.OplusSwitchPreference
            android:key="moreLogging"
            android:summary="@string/more_logging_summary"
            android:title="@string/more_logging_title"
            app:icon="@drawable/ic_logging" />

    </it.dhd.oneplusui.preference.OplusPreferenceCategory>

    <it.dhd.oneplusui.preference.OplusPreferenceCategory
        android:title="@string/update"
        app:iconSpaceReserved="false">

        <it.dhd.oneplusui.preference.OplusJumpPreference
            android:key="updates"
            android:title="@string/check_updates"
            app:icon="@drawable/ic_update" />

        <it.dhd.oneplusui.preference.OplusSwitchPreference
            android:defaultValue="true"
            android:key="autoUpdate"
            android:summary="@string/auto_update_summary"
            android:title="@string/auto_update_title"
            app:icon="@drawable/ic_check_updates" />

        <it.dhd.oneplusui.preference.OplusSwitchPreference
            android:key="checkOnWifi"
            android:summary="@string/update_over_wifi_summary"
            android:title="@string/update_over_wifi_title"
            app:icon="@drawable/ic_wifi_only" />

    </it.dhd.oneplusui.preference.OplusPreferenceCategory>

    <it.dhd.oneplusui.preference.OplusPreferenceCategory
        android:title="@string/settings_about_section_title"
        app:iconSpaceReserved="false">

        <it.dhd.oneplusui.preference.OplusPreference
            android:key="GitHubRepo"
            android:summary="@string/github_repo_summary"
            android:title="@string/github_repo_title"
            app:icon="@drawable/ic_github" />

        <it.dhd.oneplusui.preference.OplusPreference
            android:key="SupportGroup"
            android:summary="@string/support_group_summary"
            android:title="@string/support_group_title"
            app:icon="@drawable/ic_group" />

        <it.dhd.oneplusui.preference.OplusPreference
            android:key="translate"
            android:summary="@string/translate_summary"
            android:title="@string/translate_title"
            app:icon="@drawable/ic_translate" />

        <it.dhd.oneplusui.preference.OplusPreference
            android:key="credits"
            android:summary="@string/credits_summary"
            android:title="@string/credits_title"
            app:icon="@drawable/ic_credits" />

    </it.dhd.oneplusui.preference.OplusPreferenceCategory>
</PreferenceScreen>