<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:search="http://schemas.android.com/apk/it.dhd.oxygencustomizer.ui.preferences.preferencesearch">

    <it.dhd.oxygencustomizer.ui.preferences.TopIntroPreference
        android:key="launcher_intro"
        android:title="@string/launcher_intro_title"
        app:iconSpaceReserved="false"
        search:ignore="true" />

    <it.dhd.oneplusui.preference.OplusPreferenceCategory
        android:title="@string/launcher_recents"
        app:iconSpaceReserved="false">

        <it.dhd.oneplusui.preference.OplusSwitchPreference
            android:defaultValue="false"
            android:key="launcher_open_app_details"
            android:summary="@string/launcher_app_details_summary"
            android:title="@string/launcher_app_details_title"
            app:iconSpaceReserved="false" />

        <it.dhd.oneplusui.preference.OplusSwitchPreference
            android:defaultValue="false"
            android:key="disable_previous_recents"
            android:summary="@string/launcher_disable_recents_previous_page_summary"
            android:title="@string/launcher_disable_recents_previous_page_title" />

        <it.dhd.oneplusui.preference.OplusSwitchPreference
            android:defaultValue="false"
            android:key="replace_lock"
            android:summary="@string/launcher_replace_lock_summary"
            android:title="@string/launcher_replace_lock_title" />

    </it.dhd.oneplusui.preference.OplusPreferenceCategory>

</PreferenceScreen>